# PyTorchRayTracing

./: README.md  pyproject.toml
src/: camera.py  config.py  hittable.py  main.py  materials.py  sphere.py  utils.py
